From Bruce Korb <bkorb@cruzio.com> * ltmain.in (execute_dlfiles): Reduce obfuscation.

--- a/ltmain.in
+++ b/ltmain.in
@@ -122,7 +122,7 @@ do
   if test -n "$prev"; then
     case "$prev" in
     execute_dlfiles)
-      eval "$prev=\"\$$prev \$arg\""
+      execute_dlfiles="$execute_dlfiles $arg"
       ;;
     tag)
       tagname="$arg"
