--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1124,6 +1124,16 @@ netbsd*)
   hardcode_into_libs=yes
   ;;
 
+newsos6)
+  version_type=linux
+  library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major $libname.so'
+  shlibpath_var=LD_LIBRARY_PATH
+  shlibpath_overrides_runpath=yes
+  file_magic_cmd=/usr/bin/file
+  deplibs_check_method='file_magic ELF [0-9][0-9]*-bit [ML]SB (executable|dynamic lib)'
+  file_magic_test_file=/usr/lib/libnls.so
+  ;;
+
 openbsd*)
   version_type=sunos
   if test "$with_gnu_ld" = yes; then
