* ltconfig.in (netbsd*, deplibs_check_method): Enable ILD support for NetBSD a.out.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1114,11 +1114,15 @@ netbsd*)
     library_names_spec='${libname}${release}.so$versuffix ${libname}.so$versuffix'
     finish_cmds='PATH="\$PATH:/sbin" ldconfig -m $libdir'
     dynamic_linker='NetBSD (a.out) ld.so'
+    deplibs_check_method='file_magic NetBSD/[a-z0-9]* demand paged shared library'
   else
     library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so$major ${libname}${release}.so ${libname}.so'
     soname_spec='${libname}${release}.so$major'
     dynamic_linker='NetBSD ld.elf_so'
+    deplibs_check_method='file_magic ELF [0-9][0-9]*-bit [ML]SB shared object'
   fi
+  file_magic_cmd='/usr/bin/file -L'
+  file_magic_test_file=`echo /usr/lib/libc.so*`
   shlibpath_var=LD_LIBRARY_PATH
   shlibpath_overrides_runpath=yes
   hardcode_into_libs=yes
