--- a/ltmain.in
+++ b/ltmain.in
@@ -1058,7 +1058,7 @@ compiler."
 	  $echo "$modename: warning: assuming \`-no-fast-install' instead" 1>&2
 	  fast_install=no
 	  ;;
-        *-*-rhapsody*)
+        *-*-rhapsody*|*-*-darwin*)
 	  # rhapsody is a little odd...
 	  deplibs="$deplibs -framework System"
 	  ;;
