* libtool.m4: (dyld/darwin*) Much improved port. * ltmain.in: (dyld/darwin*) Much improved port.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1026,12 +1026,20 @@ compiler."
 	    # These systems don't actually have c library (as such)
 	    continue
 	    ;;
+	  *-*-rhapsody* | *-*-darwin*)
+	    # Darwin C library is in the System framework
+	    deplibs="$deplibs -framework System"
+	    ;;
 	  esac
 	elif test "$arg" = "-lm"; then
 	  case "$host" in
 	  *-*-cygwin* | *-*-pw32* | *-*-beos*)
 	    # These systems don't actually have math library (as such)
 	    continue
+	    ;;
+	  *-*-rhapsody* | *-*-darwin*)
+	    # Darwin math library is in the System framework
+	    deplibs="$deplibs -framework System"
 	    ;;
 	  esac
 	fi
@@ -1059,7 +1067,7 @@ compiler."
 	  fast_install=no
 	  ;;
         *-*-rhapsody*|*-*-darwin*)
-	  # rhapsody is a little odd...
+	  # Darwin C library is in the System framework
 	  deplibs="$deplibs -framework System"
 	  ;;
 	*)
