--- a/ltconfig.in
+++ b/ltconfig.in
@@ -999,6 +999,15 @@ cygwin* | mingw* | pw32*)
   lt_cv_dlopen_libs=
   ;;
 
+darwin* | rhapsody*)
+  library_names_spec='${libname}.`if [ "$module" = "yes" ]; then echo so; else echo dylib; fi`'
+  need_lib_prefix=no
+  need_version=no
+  postinstall_cmds='chmod +x $lib'
+  shlibpath_overrides_runpath=yes
+  shlibpath_var=DYLD_LIBRARY_PATH
+  ;;
+
 freebsd1*)
   dynamic_linker=no
   ;;
