* ltconfig.in (sys_lib_search_path_spec): Use test instead of `['.

--- a/ltmain.in
+++ b/ltmain.in
@@ -1097,12 +1097,20 @@ EOF
 	    # These systems don't actually have c library (as such)
 	    continue
 	    ;;
+	  *-*-rhapsody* | *-*-darwin*)
+	    # Darwin C library is in the System framework
+	    deplibs="$deplibs -framework System"
+	    ;;
 	  esac
 	elif test "$arg" = "-lm"; then
 	  case "$host" in
 	  *-*-cygwin* | *-*-pw32* | *-*-beos*)
 	    # These systems don't actually have math library (as such)
 	    continue
+	    ;;
+	  *-*-rhapsody* | *-*-darwin*)
+	    # Darwin math library is in the System framework
+	    deplibs="$deplibs -framework System"
 	    ;;
 	  esac
 	fi
@@ -1129,8 +1137,8 @@ EOF
 	  $echo "$modename: warning: assuming \`-no-fast-install' instead" 1>&2
 	  fast_install=no
 	  ;;
-	*-*-rhapsody*|*-*-darwin*)
-	  # rhapsody is a little odd...
+	*-*-rhapsody* | *-*-darwin*)
+	  # Darwin C library is in the System framework
 	  deplibs="$deplibs -framework System"
 	  ;;
 	*)
