--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1000,7 +1000,7 @@ cygwin* | mingw* | pw32*)
   ;;
 
 darwin* | rhapsody*)
-  library_names_spec='${libname}.`if [ "$module" = "yes" ]; then echo so; else echo dylib; fi`'
+  library_names_spec='${libname}.`if test "$module" = "yes"; then echo so; else echo dylib; fi`'
   need_lib_prefix=no
   need_version=no
   postinstall_cmds='chmod +x $lib'
