--- a/ltconfig.in
+++ b/ltconfig.in
@@ -422,8 +422,7 @@ fi
 
 if test -n "$tagname"; then
   # Check whether tagname contains only valid characters
-  case `$echo "X$tagname" |
-        $Xsed -e 's/[-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890,/]//g'` in
+  case `$echo "X$tagname" | $Xsed -e 's/[-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890,/]//g'` in
   "") ;;
   *)
     echo "$progname: invalid tag name: $tagname" 1>&2
